--- a/news.html
+++ b/news.html
@@ -94,7 +94,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html" id="judul">Hackfood</a>
+            <a class="navbar-brand" href="index.html" id="judul">Hackfood</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -106,7 +106,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
 
-                        <a class="nav-link" href="home.html">HOME</a>
+                        <a class="nav-link" href="index.html">HOME</a>
 
                     </li>
 
